@@ -1,3 +1,11 @@
+Knot Resolver 3.x.y (2019-0m-dd)
+================================
+
+Bugfixes
+--------
+- predict module: load stats module if config didn't specify period (!755)
+
+
 Knot Resolver 3.2.1 (2019-01-10)
 ================================
 
